--- a/package.json
+++ b/package.json
@@ -12,45 +12,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "7.2.4",
-    "@angular/common": "7.2.4",
-    "@angular/compiler": "7.2.4",
-    "@angular/core": "7.2.4",
-    "@angular/forms": "7.2.4",
-    "@angular/http": "7.2.4",
-    "@angular/platform-browser": "7.2.4",
-    "@angular/platform-browser-dynamic": "7.2.4",
-    "@angular/router": "7.2.4",
-    "@ng-bootstrap/ng-bootstrap": "4.0.1",
-    "bootstrap": "4.1.3",
-    "chart.js": "2.7.3",
+    "@angular/animations": "8.2.3",
+    "@angular/common": "8.2.3",
+    "@angular/compiler": "8.2.3",
+    "@angular/core": "8.2.3",
+    "@angular/forms": "8.2.3",
+    "@angular/platform-browser": "8.2.3",
+    "@angular/platform-browser-dynamic": "8.2.3",
+    "@angular/router": "8.2.3",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.8.0",
     "clipboard": "2.0.4",
-    "core-js": "2.6.4",
-    "ngx-clipboard": "11.1.9",
-    "ngx-toastr": "9.1.2",
-    "nouislider": "13.1.1",
-    "rxjs": "6.4.0",
-    "zone.js": "0.8.29"
+    "core-js": "^3.2.1",
+    "ngx-clipboard": "^12.2.1",
+    "ngx-toastr": "^10.1.0",
+    "nouislider": "^14.0.2",
+    "rxjs": "6.5.2",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.1",
-    "@angular/cli": "7.3.1",
-    "@angular/compiler-cli": "7.2.4",
-    "@angular/language-service": "7.2.4",
-    "@types/jasmine": "3.3.8",
+    "@angular-devkit/build-angular": "~0.803.0",
+    "@angular/cli": "8.3.0",
+    "@angular/compiler-cli": "8.2.3",
+    "@angular/language-service": "8.2.3",
+    "@types/jasmine": "^3.4.0",
     "@types/jasminewd2": "2.0.6",
-    "@types/node": "11.9.0",
-    "codelyzer": "4.5.0",
-    "jasmine-core": "3.3.0",
+    "@types/node": "^12.7.2",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.0.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-coverage-istanbul-reporter": "2.0.4",
+    "karma": "^4.3.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
     "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
+    "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "5.4.2",
-    "ts-node": "8.0.2",
-    "tslint": "5.12.1",
-    "typescript": "3.2.4"
+    "ts-node": "^8.3.0",
+    "tslint": "^5.19.0",
+    "typescript": "3.5.3"
   }
 }
