Update package dependencies

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o --proxy-config=proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,32 +12,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "10.1.4",
-    "@angular/common": "10.1.4",
-    "@angular/compiler": "10.1.4",
-    "@angular/core": "10.1.4",
-    "@angular/forms": "10.1.4",
-    "@angular/http": "7.2.16",
-    "@angular/localize": "^10.1.4",
-    "@angular/platform-browser": "10.1.4",
-    "@angular/platform-browser-dynamic": "10.1.4",
-    "@angular/router": "10.1.4",
-    "@ng-bootstrap/ng-bootstrap": "7.0.0",
-    "bootstrap": "4.5.2",
+    "@angular/animations": "11.0.9",
+    "@angular/common": "11.0.9",
+    "@angular/compiler": "11.0.9",
+    "@angular/core": "^11.0.9",
+    "@angular/forms": "11.0.9",
+    "@angular/localize": "^11.0.9",
+    "@angular/platform-browser": "11.0.9",
+    "@angular/platform-browser-dynamic": "11.0.9",
+    "@angular/router": "11.0.9",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.0",
+    "bootstrap": "^4.6.0",
     "chart.js": "2.9.3",
     "clipboard": "2.0.6",
     "core-js": "3.6.5",
-    "ngx-clipboard": "13.0.1",
+    "ngx-clipboard": "^14.0.1",
     "ngx-toastr": "13.0.0",
     "nouislider": "14.6.2",
     "rxjs": "6.6.3",
-    "zone.js": "0.11.1"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1001.4",
-    "@angular/cli": "10.1.4",
-    "@angular/compiler-cli": "10.1.4",
-    "@angular/language-service": "10.1.4",
+    "@angular-devkit/build-angular": "^0.1100.7",
+    "@angular/cli": "^11.0.7",
+    "@angular/compiler-cli": "11.0.9",
+    "@angular/language-service": "11.0.9",
     "@types/jasmine": "3.5.14",
     "@types/jasminewd2": "2.0.8",
     "@types/node": "14.11.2",
