--- a/package.json
+++ b/package.json
@@ -17,24 +17,23 @@
     "@angular/compiler": "12.1.2",
     "@angular/core": "12.1.2",
     "@angular/forms": "12.1.2",
-    "@angular/http": "7.2.16",
-    "@angular/localize": "^12.1.2",
+    "@angular/localize": "12.1.2",
     "@angular/platform-browser": "12.1.2",
     "@angular/platform-browser-dynamic": "12.1.2",
     "@angular/router": "12.1.2",
     "@ng-bootstrap/ng-bootstrap": "10.0.0",
     "bootstrap": "4.5.2",
-    "chart.js": "2.9.3",
+    "chart.js": "^2.9.4",
     "clipboard": "2.0.6",
     "core-js": "3.15.2",
     "ngx-clipboard": "14.0.1",
     "ngx-toastr": "14.0.0",
     "nouislider": "14.6.2",
-    "rxjs": "7.2.0",
+    "rxjs": "^6.6.6",
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.1.2",
+    "@angular-devkit/build-angular": "^12.2.16",
     "@angular/cli": "12.1.2",
     "@angular/compiler-cli": "12.1.2",
     "@angular/language-service": "12.1.2",
@@ -44,7 +43,7 @@
     "codelyzer": "6.0.2",
     "jasmine-core": "3.8.0",
     "jasmine-spec-reporter": "7.0.0",
-    "karma": "6.3.4",
+    "karma": "^6.3.17",
     "karma-chrome-launcher": "3.1.0",
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.1",
