--- a/package.json
+++ b/package.json
@@ -12,45 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "12.1.2",
-    "@angular/common": "12.1.2",
-    "@angular/compiler": "12.1.2",
-    "@angular/core": "12.1.2",
-    "@angular/forms": "12.1.2",
-    "@angular/localize": "12.1.2",
-    "@angular/platform-browser": "12.1.2",
-    "@angular/platform-browser-dynamic": "12.1.2",
-    "@angular/router": "12.1.2",
-    "@ng-bootstrap/ng-bootstrap": "10.0.0",
-    "bootstrap": "4.5.2",
-    "chart.js": "^2.9.4",
-    "clipboard": "2.0.6",
-    "core-js": "3.15.2",
-    "ngx-clipboard": "14.0.1",
-    "ngx-toastr": "14.0.0",
-    "nouislider": "14.6.2",
-    "rxjs": "^6.6.6",
-    "zone.js": "0.11.4"
+
+    "@angular/animations": "13.3.1",
+    "@angular/cdk": "^13.3.1",
+    "@angular/common": "^13.3.1",
+    "@angular/compiler": "^13.3.1",
+    "@angular/core": "^13.3.1",
+    "@angular/elements": "^13.3.1",
+    "@angular/forms": "^13.3.1",
+    "@angular/platform-browser": "^13.3.1",
+    "@angular/platform-browser-dynamic": "^13.3.1",
+    "@angular/router": "^13.3.1",
+    "@angular/localize": "13.3.1",
+    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "bootstrap": "4.6.1",
+    "chart.js": "2.9.4",
+    "clipboard": "2.0.10",
+    "core-js": "3.21.1",
+    "ngx-clipboard": "15.0.1",
+    "ngx-toastr": "14.2.2",
+    "nouislider": "15.5.1",
+    "rxjs": "^7.5.5",
+    "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.2.16",
-    "@angular/cli": "12.1.2",
-    "@angular/compiler-cli": "12.1.2",
-    "@angular/language-service": "12.1.2",
-    "@types/jasmine": "3.8.1",
-    "@types/jasminewd2": "2.0.10",
+    "@angular-devkit/build-angular": "^13.3.1",
+    "@angular/cli": "^13.3.1",
+    "@angular/compiler-cli": "^13.3.1",
+    "@angular/language-service": "13.3.1",
+    "@types/jasmine": "~3.10.3",
+    "@types/jasminewd2": "~2.0.10",
     "@types/node": "16.3.2",
     "codelyzer": "6.0.2",
-    "jasmine-core": "3.8.0",
-    "jasmine-spec-reporter": "7.0.0",
+    "jasmine-core": "~4.0.1",
+    "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.17",
-    "karma-chrome-launcher": "3.1.0",
-    "karma-coverage-istanbul-reporter": "3.0.3",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.7.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~4.0.1",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "7.0.0",
-    "ts-node": "10.1.0",
+    "ts-node": "~10.7.0",
     "tslint": "6.1.3",
-    "typescript": "4.3.5"
+    "typescript": "~4.4.2"
   }
 }
