--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "private": true,
   "dependencies": {
-
     "@angular/animations": "13.3.1",
     "@angular/cdk": "^13.3.1",
     "@angular/common": "^13.3.1",
@@ -20,11 +19,12 @@
     "@angular/core": "^13.3.1",
     "@angular/elements": "^13.3.1",
     "@angular/forms": "^13.3.1",
+    "@angular/localize": "13.3.1",
     "@angular/platform-browser": "^13.3.1",
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/router": "^13.3.1",
-    "@angular/localize": "13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@popperjs/core": "^2.11.4",
     "bootstrap": "4.6.1",
     "chart.js": "2.9.4",
     "clipboard": "2.0.10",
