--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "@angular/elements": "^13.3.1",
     "@angular/forms": "^13.3.1",
     "@angular/localize": "13.3.1",
+    "@angular/material": "^13.3.2",
     "@angular/platform-browser": "^13.3.1",
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/router": "^13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@nguniversal/express-engine": "^13.1.0",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "4.6.1",
     "chart.js": "2.9.4",
@@ -37,9 +39,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^13.3.1",
-    "@angular/cli": "^13.3.1",
+    "@angular/cli": "^13.3.9",
     "@angular/compiler-cli": "^13.3.1",
     "@angular/language-service": "13.3.1",
+    "@schematics/angular": "^14.1.3",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "16.3.2",
