--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "13.3.1",
+    "@angular/animations": "^13.3.1",
     "@angular/cdk": "^13.3.1",
     "@angular/common": "^13.3.1",
     "@angular/compiler": "^13.3.1",
@@ -20,11 +20,13 @@
     "@angular/elements": "^13.3.1",
     "@angular/forms": "^13.3.1",
     "@angular/localize": "13.3.1",
+    "@angular/material": "^13.3.2",
     "@angular/platform-browser": "^13.3.1",
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/router": "^13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@popperjs/core": "^2.11.4",
+    "angular-material": "^1.2.5",
     "bootstrap": "4.6.1",
     "chart.js": "2.9.4",
     "clipboard": "2.0.10",
