--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "chart.js": "2.9.4",
     "clipboard": "2.0.10",
     "ngx-clipboard": "15.0.1",
+    "ngx-doc-viewer": "^15.0.1",
+    "ngx-extended-pdf-viewer": "^17.0.0-alpha.8",
     "ngx-pagination": "^6.0.3",
     "ngx-toastr": "14.2.2",
     "nouislider": "15.5.1",
