--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "@coreui/coreui": "^4.2.6",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@ng-bootstrap/ng-bootstrap": "12.0.1",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
     "@popperjs/core": "^2.11.4",
-    "bootstrap": "4.6.1",
+    "bootstrap": "^4.6.1",
     "chart.js": "2.9.4",
     "clipboard": "2.0.10",
     "ngx-clipboard": "15.0.1",
