--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "cross-env CI=false ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -56,6 +56,7 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "protractor": "7.0.0",
     "ts-node": "~10.9.1",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "cross-env": "^7.0.3"
   }
 }
